# falsedev_api

./: Cargo.toml
src/: errors.rs  lib.rs  main.rs  server.rs
src/datastructures/: image.rs  template.rs
src/fairings/: mod.rs
src/imagelib/: drawtext.rs  fillcolor.rs  image_response.rs  mod.rs
src/routes/image/: color.rs  manipulation.rs  merge.rs  mod.rs  templates.rs
src/state/: asset_cache.rs  config.rs  mod.rs  serverstate.rs
