cargo-features = ["strip"]

[package]
name = "falsedev_api"
version = "0.1.0"
edition = "2018"

[profile.release]
strip = "symbols"
panic = "abort"
lto = true

[dependencies]
base64 = "0.13.0"
lazy_static = "1.4.0"
conv = "*"
imageproc = "0.22"
serde_json = "1.0"
rusttype = "0.9.2"
textwrap = "0.14.2"

[dependencies.chrono]
version = "0.4.19"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.structopt]
version = "0.3.22"
optional = true

[dependencies.figment]
version = "0.10.6"
features = ["toml"]

[dependencies.image]
version = "0.23"
default-features = false
features = ["gif", "jpeg", "png", "jpeg_rayon"]

[dependencies.num_cpus]
version = "1.13.0"
optional = true

[dependencies.openssl]
version = "0.10.32"
features = ["vendored"]

[dependencies.redis]
version = "*"
optional = true

[dependencies.jsonwebtoken]
version = "7"
optional = true

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]

[dependencies.rocket]
version = "0.5.0-rc"
default-features = false
features = ["json"]

[dependencies.tokio]
version = "1.6.1"
features = ["fs", "io-std", "io-util", "rt-multi-thread", "sync", "signal", "macros"]

[features]
default = []
redis_ratelimit = ["redis", "jsonwebtoken", "chrono"]
cli = ["structopt", "num_cpus"]
file_input = []
